Fixed alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -172,10 +172,10 @@ ul {
   height: 150px !important;
 }
 
-.helper {
+.vcenter {
     display: inline-block;
-    height: 100%;
     vertical-align: middle;
+    height: 100%;
 }
 
 .image{
@@ -206,6 +206,12 @@ ul {
   cursor:pointer;
   overflow: hidden;
   outline:none;
+}
+
+.centerlogo {
+    display: inline-block;
+    vertical-align: middle;
+    float: none !important;
 }
 
 .jobsection{
